@@ -92,6 +92,7 @@ Base Module       Valid Tags           Notes
 - (load.c)          <load/>         loads shared objects into memory
 base_accept         <accept/>       listens on a socket for an xml stream
 base_connect        <connect/>      connects an xml stream to a remote socket
+base_dir	    <dir/>	    periodically checks a directory for stanza files
 base_dynamic
 base_exec           <exec/>         executes a file and passes xml on stdin/out
 base_file           <file/>         to log to a file
