@@ -1,3 +1,9 @@
+2005-08-09  Matthias Wimmer  <m@tthias.net>
+
+    * jabberd/static.c: new base handler base_dir for reading stanza files
+    * jabberd/base/Makefile.am: same
+    * jabberd/base/base_dir.c: same
+
 2005-07-11  Matthias Wimmer  <m@tthias.net>
 
    * jabberd/lib/crc32.c: fixing sizeof() problem with arrays as function args
